--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
+    "css-loader": "^5.1.2",
+    "style-loader": "^2.0.0",
     "webpack": "^5.25.1",
     "webpack-cli": "^4.5.0"
   }
