--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "private": true,
   "devDependencies": {
     "css-loader": "^5.1.2",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.3.9",
     "style-loader": "^2.0.0",
     "webpack": "^5.25.1",
     "webpack-cli": "^4.5.0"
